Bug 1923987 - [wpt-sync] Update web-platform-tests to 489e5375b841dca41b93b872e65a7fa9a7ce936b, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 489e5375b841dca41b93b872e65a7fa9a7ce936b
wpt-type: landing

UltraBlame original commit: 6ba5147b29ade4e2841fb861bf2a36fb3e221b31

--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp.https.window.js.ini
@@ -14,8 +14,7 @@ dedicated_worker
 expected
 :
 if
-not
-fission
+debug
 and
 (
 os
@@ -26,9 +25,13 @@ linux
 "
 )
 and
-debug
+not
+fission
 :
+[
+ERROR
 CRASH
+]
 ERROR
 [
 Timestamp
