--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_continuously_increasing.https.window.js.ini
@@ -13,6 +13,25 @@ dedicated_worker
 ]
 expected
 :
+if
+not
+fission
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+ERROR
+CRASH
+]
 ERROR
 [
 Timestamp
