--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
@@ -50,27 +50,24 @@ dedicated_worker
 expected
 :
 if
+debug
+and
 (
 os
 =
 =
 "
-win
+linux
 "
 )
 and
-debug
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
+not
+fission
 :
-TIMEOUT
+[
+ERROR
+CRASH
+]
 ERROR
 [
 Faster
