--- a/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-auto-selected-flag.tentative.https.html.ini
+++ b/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-auto-selected-flag.tentative.https.html.ini
@@ -19,15 +19,6 @@ html
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-OK
 TIMEOUT
 [
 Test
@@ -40,19 +31,10 @@ can
 be
 true
 in
-button
+active
 mode
 .
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 TIMEOUT
