--- a/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-basics.tentative.https.html.ini
+++ b/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-basics.tentative.https.html.ini
@@ -20,23 +20,25 @@ TIMEOUT
 Test
 that
 the
-button
+mediation
+:
+silent
+is
+not
+supported
+in
+active
 mode
-without
-user
-activation
-will
-fail
 .
 ]
 expected
 :
-TIMEOUT
+NOTRUN
 [
 Test
 that
 the
-button
+active
 mode
 succeeds
 with
@@ -51,17 +53,15 @@ NOTRUN
 Test
 that
 the
-mediation
-:
-silent
-is
-not
-supported
-in
-button
+active
 mode
+without
+user
+activation
+will
+fail
 .
 ]
 expected
 :
-NOTRUN
+TIMEOUT
