--- a/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-priority.tentative.https.html.ini
+++ b/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-button-mode-priority.tentative.https.html.ini
@@ -15,111 +15,66 @@ html
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-ERROR
 TIMEOUT
 [
 Test
 that
 the
-widget
+active
+mode
+cannot
+replace
+active
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Test
+that
+the
+active
+mode
+can
+replace
+passive
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Test
+that
+the
+passive
 mode
 can
 succeed
 after
 the
-button
+active
 mode
 .
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 TIMEOUT
 [
 Test
 that
 the
-button
-mode
-can
-replace
-widget
-mode
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-NOTRUN
-[
-Test
-that
-the
-button
+passive
 mode
 cannot
 replace
-button
+active
 mode
 .
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-NOTRUN
-[
-Test
-that
-the
-widget
-mode
-cannot
-replace
-button
-mode
-.
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
 NOTRUN
