--- a/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-use-other-account-button-flow.tentative.https.html.ini
+++ b/testing/web-platform/meta/fedcm/fedcm-button-and-other-account/fedcm-use-other-account-button-flow.tentative.https.html.ini
@@ -19,15 +19,6 @@ html
 ]
 expected
 :
-if
-os
-=
-=
-"
-android
-"
-:
-ERROR
 TIMEOUT
 [
 Test
@@ -38,7 +29,7 @@ Use
 Other
 Account
 "
-button
+active
 works
 correctly
 .
@@ -55,7 +46,7 @@ Use
 Other
 Account
 "
-button
+active
 works
 correctly
 when
