--- a/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-to-same-origin.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/iframe-popup-same-origin-to-same-origin.https.html.ini
@@ -1191,33 +1191,12 @@ last
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
 :
 [
 OK
@@ -1249,15 +1228,37 @@ html
 expected
 :
 if
+(
 os
 =
 =
 "
 android
 "
+)
+and
+debug
 :
 [
 OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+not
+debug
+:
+[
+OK
+ERROR
 TIMEOUT
 ]
 [
@@ -1370,27 +1371,6 @@ android
 )
 and
 debug
-and
-swgl
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-and
-not
-swgl
 :
 [
 OK
@@ -1411,5 +1391,6 @@ debug
 :
 [
 OK
+ERROR
 TIMEOUT
 ]
