--- a/testing/web-platform/meta/html/dom/render-blocking/element-render-blocking-026.html.ini
+++ b/testing/web-platform/meta/html/dom/render-blocking/element-render-blocking-026.html.ini
@@ -24,6 +24,13 @@ satisfied
 expected
 :
 if
+fission
+and
+not
+tsan
+:
+PASS
+if
 not
 fission
 and
@@ -32,10 +39,11 @@ os
 =
 =
 "
-linux
+android
 "
 )
 :
+PASS
 [
 PASS
 FAIL
