--- a/testing/web-platform/meta/html/semantics/embedded-content/the-canvas-element/toBlob-cross-realm-callback-report-exception.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-canvas-element/toBlob-cross-realm-callback-report-exception.html.ini
@@ -36,8 +36,47 @@ expected
 if
 not
 asan
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+tsan
 :
+[
 PASS
+FAIL
+]
+if
+not
+asan
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+asan
+:
 [
 PASS
 FAIL
