--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
@@ -24,34 +24,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 FAIL
@@ -68,7 +47,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 FAIL
@@ -123,34 +105,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -167,7 +128,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
@@ -203,34 +167,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -247,7 +190,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
@@ -288,34 +234,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -332,7 +257,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
@@ -367,34 +295,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -411,7 +318,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
@@ -446,34 +356,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -490,7 +379,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
@@ -532,34 +424,13 @@ linux
 "
 )
 and
-fission
-and
 not
-asan
+tsan
 and
-not
 debug
 and
 not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
 fission
-and
-asan
 :
 [
 PASS
@@ -576,7 +447,10 @@ linux
 )
 and
 not
-fission
+tsan
+and
+not
+debug
 :
 [
 PASS
