--- a/testing/web-platform/meta/html/semantics/embedded-content/the-object-element/object-fallback-failed-cross-origin-navigation.sub.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-object-element/object-fallback-failed-cross-origin-navigation.sub.html.ini
@@ -19,17 +19,65 @@ expected
 :
 if
 (
-os
+processor
 =
 =
 "
-android
+x86
 "
 )
 and
-fission
+not
+debug
 :
-[
-OK
 TIMEOUT
+[
+Verify
+fallback
+content
+for
+failed
+cross
+-
+origin
+navigations
+is
+shown
+correctly
+:
+http
+:
+/
+/
+nonexistent
+.
+not
+-
+web
+-
+platform
+.
+test
+:
+8000
+/
+foo
+.
+html
 ]
+expected
+:
+if
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+not
+debug
+:
+TIMEOUT
