--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -32,12 +32,46 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -50,61 +84,8 @@ and
 tsan
 :
 [
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
 ]
 if
 (
@@ -117,10 +98,76 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 The
@@ -149,12 +196,46 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -167,61 +248,8 @@ and
 tsan
 :
 [
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
 ]
 if
 (
@@ -234,10 +262,76 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 The
@@ -266,12 +360,46 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -284,61 +412,8 @@ and
 tsan
 :
 [
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
 ]
 if
 (
@@ -351,10 +426,76 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 The
@@ -381,12 +522,46 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -399,61 +574,8 @@ and
 tsan
 :
 [
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
 ]
 if
 (
@@ -466,10 +588,76 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
 ]
 [
 The
@@ -492,12 +680,46 @@ linux
 "
 )
 and
+not
+debug
+and
+asan
+and
+fission
+:
+[
+FAIL
+PASS
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
+"
+)
+and
+not
+debug
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
 "
 )
 and
@@ -510,61 +732,8 @@ and
 tsan
 :
 [
-PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
 ]
 if
 (
@@ -577,8 +746,74 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 FAIL
 PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
 ]
