--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.permission-self.tentative.sub.https.window.js.ini
@@ -37,19 +37,25 @@ os
 =
 =
 "
-linux
+win
 "
 )
 :
-[
 OK
-TIMEOUT
-]
 if
+not
 asan
 and
-fission
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
+OK
 [
 OK
 TIMEOUT
