--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.proxy-cross.tentative.sub.https.window.js.ini
@@ -21,20 +21,86 @@ expected
 :
 if
 (
+os
+=
+=
+"
+linux
+"
+)
+and
+(
 processor
 =
 =
 "
-x86
+x86_64
 "
 )
 and
+not
+debug
+and
+not
+tsan
+and
+fission
+and
+not
+asan
+:
+[
+OK
+TIMEOUT
+]
+if
 (
 os
 =
 =
 "
 linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
+not
+tsan
+and
+not
+fission
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
 "
 )
 :
