--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
@@ -27,9 +27,23 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
 asan
 and
-fission
+not
+debug
+and
+not
+tsan
 :
 [
 OK
@@ -45,12 +59,21 @@ linux
 "
 )
 and
-asan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
-not
-fission
+asan
 :
+[
+OK
 TIMEOUT
+]
 if
 (
 os
@@ -60,9 +83,6 @@ os
 linux
 "
 )
-and
-not
-asan
 and
 (
 processor
