--- a/testing/web-platform/meta/scroll-animations/scroll-timelines/current-time-writing-modes.html.ini
+++ b/testing/web-platform/meta/scroll-animations/scroll-timelines/current-time-writing-modes.html.ini
@@ -50,3 +50,33 @@ correctly
 expected
 :
 FAIL
+[
+currentTime
+handles
+writing
+-
+mode
+:
+sideways
+-
+lr
+correctly
+]
+expected
+:
+FAIL
+[
+currentTime
+handles
+writing
+-
+mode
+:
+sideways
+-
+rl
+correctly
+]
+expected
+:
+FAIL
