--- a/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
+++ b/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
@@ -39,10 +39,32 @@ linux
 )
 and
 not
-debug
+asan
 and
-not
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 tsan
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 asan
@@ -55,24 +77,8 @@ processor
 x86_64
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
-debug
-and
 tsan
 :
 [
@@ -89,7 +95,9 @@ linux
 "
 )
 and
-debug
+asan
+and
+fission
 :
 [
 PASS
