--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/process-getter.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/process-getter.https.html.ini
@@ -15,13 +15,56 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
-[
-OK
 TIMEOUT
+[
+'
+process
+'
+getter
+on
+prototype
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+TIMEOUT
+[
+'
+process
+'
+getter
+on
+instance
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+NOTRUN
