--- a/testing/web-platform/meta/webcodecs/__dir__.ini
+++ b/testing/web-platform/meta/webcodecs/__dir__.ini
@@ -71,6 +71,7 @@ lsan
 allowed
 :
 [
+MakeAndAddRef
 PLDHashTable
 :
 :
@@ -102,4 +103,14 @@ GPUVideoImage
 :
 :
 GPUVideoImage
+mozilla
+:
+:
+layers
+:
+:
+ShmemTextureData
+:
+:
+Create
 ]
