--- a/testing/web-platform/meta/webcodecs/videoFrame-canvasImageSource.html.ini
+++ b/testing/web-platform/meta/webcodecs/videoFrame-canvasImageSource.html.ini
@@ -13,3 +13,21 @@ VideoFrame
 expected
 :
 FAIL
+[
+<
+video
+>
+and
+VideoFrame
+constructed
+VideoFrame
+]
+expected
+:
+if
+asan
+:
+[
+PASS
+FAIL
+]
