--- a/testing/web-platform/meta/webrtc-encoded-transform/script-transform-generateKeyFrame-simulcast.https.html.ini
+++ b/testing/web-platform/meta/webrtc-encoded-transform/script-transform-generateKeyFrame-simulcast.https.html.ini
@@ -47,10 +47,9 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 :
-PASS
 [
 PASS
 FAIL
@@ -64,6 +63,31 @@ rids
 ]
 expected
 :
+if
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 (
 processor
