--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -31,6 +31,7 @@ win
 "
 )
 and
+not
 debug
 and
 (
@@ -38,7 +39,7 @@ processor
 =
 =
 "
-x86
+x86_64
 "
 )
 :
@@ -68,7 +69,26 @@ x86
 "
 )
 :
+[
 FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
 if
 (
 os
@@ -79,9 +99,13 @@ mac
 "
 )
 and
+not
 debug
 :
+[
 PASS
+FAIL
+]
 if
 (
 os
@@ -92,19 +116,8 @@ linux
 "
 )
 and
-not
 tsan
 :
-PASS
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
 [
 PASS
 FAIL
