--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworkletprocessor-process-zero-outputs.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audioworklet-interface/audioworkletprocessor-process-zero-outputs.https.html.ini
@@ -19,13 +19,63 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
 [
 OK
 TIMEOUT
+]
+[
+Executing
+"
+check
+-
+zero
+-
+outputs
+"
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+TIMEOUT
+]
+[
+Audit
+report
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
 ]
