--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -47,6 +47,32 @@ os
 =
 =
 "
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+OK
+ERROR
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
