Bug 1922608 - Extend privacy.sanitize probes to expire in Fx140. r=anti-tracking-reviewers,manuel
Differential Revision: https://phabricator.services.mozilla.com/D225354

UltraBlame original commit: 83dfa8af467f6438cf00b83162ace70824822dd3

--- a/browser/base/content/metrics.yaml
+++ b/browser/base/content/metrics.yaml
@@ -158,6 +158,18 @@ mozilla
 org
 /
 1856417
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1922608
 data_reviews
 :
 -
@@ -183,7 +195,7 @@ c4
 notification_emails
 :
 -
-hsohaney
+wwen
 mozilla
 .
 com
@@ -194,7 +206,7 @@ mozilla
 com
 expires
 :
-134
+140
 extra_keys
 :
 context
@@ -259,6 +271,18 @@ mozilla
 org
 /
 1856417
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1922608
 data_reviews
 :
 -
@@ -284,7 +308,7 @@ c4
 notification_emails
 :
 -
-hsohaney
+wwen
 mozilla
 .
 com
@@ -295,7 +319,7 @@ mozilla
 com
 expires
 :
-134
+140
 extra_keys
 :
 context
@@ -424,6 +448,18 @@ mozilla
 org
 /
 1856417
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1922608
 data_reviews
 :
 -
@@ -449,7 +485,7 @@ c4
 notification_emails
 :
 -
-hsohaney
+wwen
 mozilla
 .
 com
@@ -460,7 +496,7 @@ mozilla
 com
 expires
 :
-134
+140
 extra_keys
 :
 time_span
@@ -524,6 +560,18 @@ mozilla
 org
 /
 1856417
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1922608
 data_reviews
 :
 -
@@ -549,7 +597,7 @@ c4
 notification_emails
 :
 -
-hsohaney
+wwen
 mozilla
 .
 com
@@ -560,7 +608,7 @@ mozilla
 com
 expires
 :
-134
+140
 security
 .
 ui
