--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -49418,6 +49418,35 @@ mirror
 always
 #
 Use
+the
+realm
+local
+dom
+alloc
+site
+.
+-
+name
+:
+javascript
+.
+options
+.
+dom_alloc_site
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+set_spidermonkey_pref
+:
+always
+#
+Use
 better
 error
 message
