--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -50135,6 +50135,38 @@ startup
 Experimental
 support
 for
+Error
+.
+isError
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+error_iserror
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
+Experimental
+support
+for
 Math
 .
 sumPrecise
