--- a/toolkit/components/contentanalysis/tests/browser/browser.toml
+++ b/toolkit/components/contentanalysis/tests/browser/browser.toml
@@ -396,3 +396,79 @@ clipboard_print_iframe
 html
 "
 ]
+[
+"
+browser_print_pdf_local_content_analysis
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+!
+/
+toolkit
+/
+components
+/
+printing
+/
+tests
+/
+head
+.
+js
+"
+"
+browser_print_pdf_content_analysis_impl
+.
+js
+"
+"
+file_pdf
+.
+pdf
+"
+]
+[
+"
+browser_print_pdf_remote_content_analysis
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+!
+/
+toolkit
+/
+components
+/
+printing
+/
+tests
+/
+head
+.
+js
+"
+"
+browser_print_pdf_content_analysis_impl
+.
+js
+"
+"
+file_pdf
+.
+pdf
+"
+]
