Bug 1921747 - Implement :has-slotted pseudo r=emilio
https://drafts.csswg.org/css-scoping-1/#the-has-slotted-pseudo

Differential Revision: https://phabricator.services.mozilla.com/D224227

UltraBlame original commit: ec4707595a1dd71d2100c69554af154170e003f0

--- a/testing/web-platform/meta/css/selectors/parsing/parse-has-slotted.tentative.html.ini
+++ b/testing/web-platform/meta/css/selectors/parsing/parse-has-slotted.tentative.html.ini
@@ -9,6 +9,23 @@ tentative
 .
 html
 ]
+prefs
+:
+[
+layout
+.
+css
+.
+has
+-
+slotted
+-
+selector
+.
+enabled
+:
+true
+]
 [
 "
 :
@@ -430,22 +447,6 @@ has
 span
 )
 )
-"
-should
-be
-a
-valid
-selector
-]
-expected
-:
-FAIL
-[
-"
-:
-has
--
-slotted
 "
 should
 be
