--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -56392,6 +56392,43 @@ rust
 :
 true
 #
+Whether
+the
+:
+has
+-
+slotted
+pseudo
+class
+is
+enabled
+-
+name
+:
+layout
+.
+css
+.
+has
+-
+slotted
+-
+selector
+.
+enabled
+type
+:
+RelaxedAtomicBool
+value
+:
+false
+mirror
+:
+always
+rust
+:
+true
+#
 Is
 support
 for
