--- a/browser/base/content/test/general/browser.toml
+++ b/browser/base/content/test/general/browser.toml
@@ -221,6 +221,11 @@ files
 =
 [
 "
+alltabslistener
+.
+html
+"
+"
 app_bug575561
 .
 html
@@ -244,6 +249,16 @@ html
 browser_star_hsts
 .
 sjs
+"
+"
+browser_tab_dragdrop2_frame1
+.
+xhtml
+"
+"
+browser_tab_dragdrop_embed
+.
+html
 "
 "
 bug792517
@@ -294,6 +309,11 @@ html
 "
 "
 file_documentnavigation_frameset
+.
+html
+"
+"
+file_double_close_tab
 .
 html
 "
@@ -448,7 +468,52 @@ INSTEAD
 .
 [
 "
+browser_alltabslistener
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_backButtonFitts
+.
+js
+"
+]
+https_first_disabled
+=
+true
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_beforeunload_duplicate_dialogs
 .
 js
 "
@@ -2055,6 +2120,27 @@ INSTEAD
 .
 [
 "
+browser_ctrlTab
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_datachoices_notification
 .
 js
@@ -2158,6 +2244,27 @@ tags
 "
 fullscreen
 "
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_double_close_tab
+.
+js
+"
+]
 #
 DO
 NOT
@@ -2499,6 +2606,53 @@ INSTEAD
 .
 [
 "
+browser_lastAccessedTab
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+windows
+'
+"
+]
+#
+Disabled
+on
+Windows
+due
+to
+frequent
+failures
+(
+bug
+969405
+)
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_menuButtonFitts
 .
 js
@@ -2667,7 +2821,79 @@ INSTEAD
 .
 [
 "
+browser_newTabDrop
+.
+js
+"
+]
+https_first_disabled
+=
+true
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+fission
+&
+&
+tsan
+"
+]
+#
+high
+frequency
+intermittent
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_newWindowDrop
+.
+js
+"
+]
+https_first_disabled
+=
+true
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_new_http_window_opened_from_file_tab
 .
 js
 "
@@ -2933,6 +3159,27 @@ INSTEAD
 .
 [
 "
+browser_relatedTabs
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_remoteTroubleshoot
 .
 js
@@ -3011,6 +3258,43 @@ browser_remoteWebNavigation_postdata
 js
 "
 ]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_restore_isAppTab
+.
+js
+"
+]
+run
+-
+if
+=
+[
+"
+crashreporter
+"
+]
+#
+test
+requires
+crashreporter
+due
+to
+1536221
 #
 DO
 NOT
@@ -3252,6 +3536,27 @@ INSTEAD
 .
 [
 "
+browser_selectTabAtIndex
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_star_hsts
 .
 js
@@ -3285,6 +3590,320 @@ if
 [
 "
 verify
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabDrop
+.
+js
+"
+]
+https_first_disabled
+=
+true
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tab_close_dependent_window
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tab_detach_restore
+.
+js
+"
+]
+https_first_disabled
+=
+true
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tab_drag_drop_perwindow
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tab_dragdrop
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
+"
+]
+#
+Bug
+1312436
+Bug
+1388973
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tab_dragdrop2
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+win11_2009
+&
+&
+bits
+=
+=
+32
+&
+&
+!
+debug
+"
+]
+#
+high
+frequency
+win7
+intermittent
+:
+crash
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabfocus
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabkeynavigation
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabs_close_beforeunload
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+close_beforeunload_opens_second_tab
+.
+html
+"
+"
+close_beforeunload
+.
+html
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabs_isActive
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_tabs_owner
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_testOpenNewRemoteTabsFromNonRemoteBrowsers
+.
+js
 "
 ]
 #
@@ -3366,6 +3985,27 @@ INSTEAD
 .
 [
 "
+browser_viewSourceInTabOnViewSource
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
 browser_visibleFindSelection
 .
 js
@@ -3392,6 +4032,87 @@ is
 not
 automating
 properly
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_visibleTabs
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_visibleTabs_bookmarkAllPages
+.
+js
+"
+]
+#
+DO
+NOT
+ADD
+MORE
+TESTS
+HERE
+.
+USE
+A
+TOPICAL
+DIRECTORY
+INSTEAD
+.
+[
+"
+browser_visibleTabs_tabPreview
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+!
+debug
+"
+]
 #
 DO
 NOT
