--- a/browser/components/genai/metrics.yaml
+++ b/browser/components/genai/metrics.yaml
@@ -129,6 +129,8 @@ genai
 .
 chatbot
 :
+#
+metrics
 enabled
 :
 type
@@ -190,7 +192,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -269,7 +271,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -345,7 +347,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -421,7 +423,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -496,7 +498,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -508,6 +510,114 @@ send_in_pings
 :
 -
 metrics
+#
+events
+contextmenu_prompt_click
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+prompt
+was
+clicked
+from
+the
+context
+menu
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1895813
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D214470
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+prompt
+:
+type
+:
+string
+description
+:
+Selected
+prompt
+id
+.
+provider
+:
+type
+:
+string
+description
+:
+Selected
+provider
+id
+.
+selection
+:
+type
+:
+quantity
+description
+:
+Selected
+text
+length
+.
 experiment_checkbox_click
 :
 type
@@ -568,7 +678,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -595,6 +705,865 @@ current
 state
 is
 enabled
+.
+onboarding_close
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+closed
+from
+provider
+choice
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+was
+last
+selected
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_continue
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+continued
+from
+provider
+choice
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+was
+last
+selected
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_finish
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+finished
+with
+start
+chatting
+button
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+was
+last
+selected
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_learn_more
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+opened
+feature
+learn
+more
+link
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+was
+last
+selected
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_provider_choice_displayed
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+impression
+for
+provider
+choice
+screen
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Current
+provider
+id
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_provider_learn
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+opened
+provider
+learn
+more
+link
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_provider_selection
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+selected
+a
+provider
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+onboarding_provider_terms
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+opened
+provider
+terms
+link
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
+.
+text
+:
+type
+:
+string
+description
+:
+Which
+terms
+link
+.
+onboarding_text_highlight_displayed
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+onboarding
+impression
+for
+text
+highlight
+screen
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Which
+provider
+was
+last
+selected
+.
+step
+:
+type
+:
+quantity
+description
+:
+Onboarding
+screen
+number
 .
 provider_change
 :
@@ -652,7 +1621,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -759,7 +1728,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -786,112 +1755,6 @@ current
 state
 is
 enabled
-.
-contextmenu_prompt_click
-:
-type
-:
-event
-description
-:
->
-Chatbot
-prompt
-was
-clicked
-from
-the
-context
-menu
-.
-bugs
-:
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-1895813
-data_reviews
-:
--
-https
-:
-/
-/
-phabricator
-.
-services
-.
-mozilla
-.
-com
-/
-D214470
-data_sensitivity
-:
--
-interaction
-expires
-:
-134
-notification_emails
-:
--
-elee
-mozilla
-.
-com
-send_in_pings
-:
--
-events
-extra_keys
-:
-prompt
-:
-type
-:
-string
-description
-:
-Selected
-prompt
-id
-.
-provider
-:
-type
-:
-string
-description
-:
-Selected
-provider
-id
-.
-selection
-:
-type
-:
-quantity
-description
-:
-Selected
-text
-length
 .
 shortcuts_displayed
 :
@@ -949,7 +1812,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -1063,7 +1926,91 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+selection
+:
+type
+:
+quantity
+description
+:
+Selected
+text
+length
+.
+shortcuts_hide_click
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+hide
+shortcuts
+was
+clicked
+from
+the
+shortcuts
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
 notification_emails
 :
 -
@@ -1146,7 +2093,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
@@ -1192,6 +2139,354 @@ description
 Selected
 text
 length
+.
+sidebar_close_click
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+close
+X
+clicked
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Selected
+provider
+id
+.
+sidebar_more_menu_click
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+more
+menu
+clicked
+an
+action
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+action
+:
+type
+:
+string
+description
+:
+Which
+action
+was
+clicked
+.
+provider
+:
+type
+:
+string
+description
+:
+Selected
+provider
+id
+.
+sidebar_more_menu_display
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+more
+menu
+opened
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+provider
+:
+type
+:
+string
+description
+:
+Selected
+provider
+id
+.
+sidebar_provider_menu_click
+:
+type
+:
+event
+description
+:
+>
+Chatbot
+provider
+menu
+clicked
+an
+action
+.
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1911104
+data_reviews
+:
+-
+https
+:
+/
+/
+phabricator
+.
+services
+.
+mozilla
+.
+com
+/
+D223938
+data_sensitivity
+:
+-
+interaction
+expires
+:
+147
+notification_emails
+:
+-
+elee
+mozilla
+.
+com
+send_in_pings
+:
+-
+events
+extra_keys
+:
+action
+:
+type
+:
+string
+description
+:
+Which
+action
+was
+clicked
+.
+provider
+:
+type
+:
+string
+description
+:
+Selected
+provider
+id
 .
 sidebar_toggle
 :
@@ -1252,7 +2547,7 @@ data_sensitivity
 interaction
 expires
 :
-134
+147
 notification_emails
 :
 -
