--- a/mobile/android/fenix/app/metrics.yaml
+++ b/mobile/android/fenix/app/metrics.yaml
@@ -1073,6 +1073,7 @@ include
 :
 add_to_homescreen
 add_to_top_sites
+addon_details
 addons_manager
 back
 back_long_press
@@ -1080,11 +1081,16 @@ bookmark
 bookmarks
 desktop_view_off
 desktop_view_on
+discover_more_extensions
+web_extension_browser_action_clicked
 downloads
+extensions_learn_more
+extensions_submenu
 find_in_page
 forward
 forward_long_press
 history
+install_addon
 new_tab
 new_private_tab
 open_in_app
@@ -1093,12 +1099,14 @@ quit
 reader_mode_appearance
 reload
 remove_from_top_sites
+save_submenu
 save_to_collection
 set_default_browser
 settings
 share
 stop
 sync_account
+tools_submenu
 translate
 and
 print_content
