Bug 1921008: part 6) Add javascript-url navigation via form-submission tests for Trusted Types. r=tschuster
Differential Revision: https://phabricator.services.mozilla.com/D223596

UltraBlame original commit: 999a70cf9b2dcc6fc81fc8fbe9f7a811f6056db5

--- a/testing/web-platform/meta/trusted-types/trusted-types-navigation.html.ini
+++ b/testing/web-platform/meta/trusted-types/trusted-types-navigation.html.ini
@@ -14,6 +14,8 @@ TIMEOUT
 Navigate
 a
 window
+via
+anchor
 with
 javascript
 :
@@ -31,6 +33,8 @@ TIMEOUT
 Navigate
 a
 window
+via
+anchor
 with
 javascript
 :
@@ -52,6 +56,8 @@ NOTRUN
 Navigate
 a
 window
+via
+anchor
 with
 javascript
 :
@@ -71,6 +77,8 @@ NOTRUN
 Navigate
 a
 window
+via
+anchor
 with
 javascript
 :
@@ -94,6 +102,8 @@ NOTRUN
 Navigate
 a
 frame
+via
+anchor
 with
 javascript
 :
@@ -111,6 +121,8 @@ NOTRUN
 Navigate
 a
 frame
+via
+anchor
 with
 javascript
 :
@@ -132,6 +144,8 @@ NOTRUN
 Navigate
 a
 frame
+via
+anchor
 with
 javascript
 :
@@ -151,6 +165,200 @@ NOTRUN
 Navigate
 a
 frame
+via
+anchor
+with
+javascript
+:
+-
+urls
+w
+/
+default
+policy
+in
+report
+-
+only
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+window
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+in
+enforcing
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+window
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+w
+/
+default
+policy
+in
+enforcing
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+window
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+in
+report
+-
+only
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+window
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+w
+/
+default
+policy
+in
+report
+-
+only
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+frame
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+in
+enforcing
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+frame
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+w
+/
+default
+policy
+in
+enforcing
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+frame
+via
+form
+-
+submission
+with
+javascript
+:
+-
+urls
+in
+report
+-
+only
+mode
+.
+]
+expected
+:
+NOTRUN
+[
+Navigate
+a
+frame
+via
+form
+-
+submission
 with
 javascript
 :
