Bug 1924180 [wpt PR 48581] - Update wpt metadata, a=testonly
wpt-pr: 48581
wpt-type: metadata

UltraBlame original commit: c2e45f73d86d3c3a05b750a2efb938b27c23b55d

--- a/testing/web-platform/meta/html/semantics/invokers/idlharness.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/idlharness.tentative.html.ini
@@ -194,3 +194,38 @@ type
 expected
 :
 FAIL
+[
+CommandEvent
+interface
+:
+attribute
+source
+]
+expected
+:
+FAIL
+[
+CommandEvent
+interface
+:
+new
+CommandEvent
+(
+"
+invoke
+"
+)
+must
+inherit
+property
+"
+source
+"
+with
+the
+proper
+type
+]
+expected
+:
+FAIL
