--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-input-number.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-input-number.tentative.html.ini
@@ -73,3 +73,73 @@ value
 expected
 :
 FAIL
+[
+invoking
+number
+input
+with
+step
+-
+up
+action
+increments
+value
+]
+expected
+:
+FAIL
+[
+invoking
+number
+input
+with
+step
+-
+up
+action
+(
+case
+-
+insensitive
+)
+increments
+value
+]
+expected
+:
+FAIL
+[
+invoking
+number
+input
+with
+step
+-
+down
+action
+decrements
+value
+]
+expected
+:
+FAIL
+[
+invoking
+number
+input
+with
+step
+-
+down
+action
+(
+case
+-
+insensitive
+)
+decrements
+value
+]
+expected
+:
+FAIL
