--- a/testing/web-platform/meta/html/semantics/invokers/invokeevent-dispatch-shadow.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invokeevent-dispatch-shadow.tentative.html.ini
@@ -34,3 +34,28 @@ element
 expected
 :
 FAIL
+[
+CommandEvent
+propagates
+across
+shadow
+boundaries
+retargeting
+source
+]
+expected
+:
+FAIL
+[
+cross
+shadow
+CommandEvent
+retargets
+source
+to
+host
+element
+]
+expected
+:
+FAIL
