--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-fullscreen-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-fullscreen-behavior.tentative.html.ini
@@ -279,3 +279,83 @@ debug
 PASS
 NOTRUN
 ]
+[
+invoking
+div
+with
+toggle
+-
+fullscreen
+action
+makes
+div
+fullscreen
+]
+expected
+:
+FAIL
+[
+invoking
+fullscreen
+div
+with
+toggle
+-
+fullscreen
+action
+exits
+fullscreen
+]
+expected
+:
+FAIL
+[
+invoking
+fullscreen
+div
+with
+toggle
+-
+fullscreen
+(
+case
+-
+insensitive
+)
+action
+exits
+fullscreen
+]
+expected
+:
+FAIL
+[
+invoking
+div
+with
+request
+-
+fullscreen
+action
+makes
+div
+fullscreen
+]
+expected
+:
+FAIL
+[
+invoking
+fullscreen
+div
+with
+exit
+-
+fullscreen
+action
+exits
+fullscreen
+]
+expected
+:
+FAIL
