--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-audio-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-audio-behavior.tentative.html.ini
@@ -208,3 +208,84 @@ it
 expected
 :
 FAIL
+[
+invoking
+audio
+with
+play
+-
+pause
+action
+makes
+audio
+play
+]
+expected
+:
+FAIL
+[
+invoking
+audio
+with
+play
+-
+pause
+action
+(
+without
+user
+activation
+)
+is
+a
+no
+-
+op
+]
+expected
+:
+FAIL
+[
+invoking
+playing
+audio
+with
+play
+-
+pause
+action
+pauses
+it
+]
+expected
+:
+FAIL
+[
+invoking
+audio
+with
+toggle
+-
+muted
+action
+mutes
+it
+]
+expected
+:
+FAIL
+[
+invoking
+muted
+audio
+with
+toggle
+-
+muted
+action
+unmutes
+it
+]
+expected
+:
+FAIL
