--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-dialog-behavior.tentative.html.ini
@@ -431,3 +431,189 @@ modal
 expected
 :
 FAIL
+[
+invoking
+(
+with
+command
+property
+as
+show
+-
+modal
+)
+closed
+dialog
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+property
+as
+show
+-
+modal
+)
+while
+changing
+command
+still
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+attribute
+as
+show
+-
+modal
+)
+closed
+dialog
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+attribute
+as
+show
+-
+modal
+)
+while
+changing
+command
+still
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+property
+as
+sHoW
+-
+mOdAl
+)
+closed
+dialog
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+property
+as
+sHoW
+-
+mOdAl
+)
+while
+changing
+command
+still
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+attribute
+as
+sHoW
+-
+mOdAl
+)
+closed
+dialog
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+with
+command
+attribute
+as
+sHoW
+-
+mOdAl
+)
+while
+changing
+command
+still
+opens
+as
+modal
+]
+expected
+:
+FAIL
+[
+invoking
+(
+as
+show
+-
+modal
+)
+closed
+popover
+dialog
+opens
+as
+modal
+]
+expected
+:
+FAIL
