--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-popover-invalid-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-popover-invalid-behavior.tentative.html.ini
@@ -119,3 +119,52 @@ nothing
 expected
 :
 FAIL
+[
+invoking
+(
+as
+showpopover
+)
+on
+open
+popover
+does
+nothing
+]
+expected
+:
+FAIL
+[
+invoking
+(
+as
+show
+-
+modal
+)
+on
+open
+popover
+does
+nothing
+]
+expected
+:
+FAIL
+[
+invoking
+(
+as
+show
+-
+picker
+)
+on
+open
+popover
+does
+nothing
+]
+expected
+:
+FAIL
