Bug 1924292 - [wpt-sync] Update web-platform-tests to c7076ab2397dd3dcf0bb93dc304d05be04cd2a47, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: c7076ab2397dd3dcf0bb93dc304d05be04cd2a47
wpt-type: landing

UltraBlame original commit: fbb56d0ca3a14f726bad8a0e75ce7bc27f49736e

--- a/testing/web-platform/meta/css/css-tables/height-distribution/computing-row-measure-0.html.ini
+++ b/testing/web-platform/meta/css/css-tables/height-distribution/computing-row-measure-0.html.ini
@@ -12,6 +12,9 @@ html
 expected
 :
 if
+not
+fission
+and
 (
 os
 =
@@ -22,18 +25,13 @@ linux
 )
 and
 debug
-and
-not
-fission
-and
-not
-swgl
 :
 [
-"
 OK
-"
-"
 ERROR
-"
 ]
+max
+-
+asserts
+:
+2
