--- a/testing/web-platform/meta/fetch/api/request/request-keepalive-quota.html.ini
+++ b/testing/web-platform/meta/fetch/api/request/request-keepalive-quota.html.ini
@@ -57,14 +57,28 @@ linux
 "
 )
 and
-fission
+not
+debug
 and
+not
+tsan
+and
+asan
+and
+not
+fission
+:
+[
+PASS
+FAIL
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
 and
@@ -72,52 +86,24 @@ not
 debug
 and
 not
-asan
-and
-not
 tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
-fission
+asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
 and
 not
 debug
