--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-play.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-play.html.ini
@@ -30,12 +30,59 @@ linux
 "
 )
 and
-not
 fission
+and
+not
+asan
+and
+tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+not
+asan
+and
+not
+tsan
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
 and
 debug
 and
-swgl
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 FAIL
@@ -51,17 +98,13 @@ linux
 "
 )
 and
-not
 fission
 and
-debug
-and
-not
-swgl
+asan
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -73,14 +116,14 @@ linux
 "
 )
 and
+not
 fission
 and
-not
-swgl
+debug
 :
 [
-FAIL
 PASS
+FAIL
 ]
 if
 (
@@ -101,21 +144,5 @@ debug
 [
 PASS
 FAIL
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-swgl
-:
-[
-FAIL
-PASS
 ]
 FAIL
