--- a/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/the-img-element/relevant-mutations-lazy.html.ini
@@ -42,6 +42,31 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -123,6 +148,31 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -174,6 +224,31 @@ debug
 and
 not
 fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
@@ -252,6 +327,31 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -302,6 +402,31 @@ debug
 and
 not
 fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
@@ -374,6 +499,31 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -431,6 +581,31 @@ debug
 and
 not
 fission
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
