--- a/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/invokers/invoketarget-on-video-behavior.tentative.html.ini
@@ -33,8 +33,8 @@ not
 debug
 :
 [
-ERROR
 OK
+ERROR
 ]
 if
 (
@@ -79,61 +79,6 @@ ERROR
 invoking
 video
 with
-playpause
-action
-makes
-video
-play
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-mac
-"
-)
-and
-not
-debug
-:
-[
-FAIL
-PASS
-]
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-[
-PASS
-FAIL
-]
-[
-invoking
-playing
-video
-with
-playpause
-action
-pauses
-it
-]
-expected
-:
-FAIL
-[
-invoking
-video
-with
 play
 action
 makes
@@ -153,31 +98,6 @@ action
 makes
 it
 pause
-]
-expected
-:
-FAIL
-[
-invoking
-video
-with
-toggleMuted
-action
-mutes
-it
-]
-expected
-:
-FAIL
-[
-invoking
-muted
-video
-with
-toggleMuted
-action
-unmutes
-it
 ]
 expected
 :
@@ -202,26 +122,17 @@ os
 =
 =
 "
-win
+linux
 "
 )
 and
 not
-debug
+fission
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
+not
+debug
 :
-[
-PASS
 FAIL
-]
 if
 (
 os
@@ -234,15 +145,23 @@ win
 and
 not
 debug
-and
+:
+[
+PASS
+FAIL
+]
+if
 (
-processor
+os
 =
 =
 "
-x86
+mac
 "
 )
+and
+not
+debug
 :
 [
 PASS
