--- a/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
@@ -27,22 +27,28 @@ linux
 "
 )
 and
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
 (
-processor
+os
 =
 =
 "
-x86_64
+linux
 "
 )
-and
-not
-tsan
-and
-not
-debug
 and
 asan
+and
+not
+fission
 :
 [
 PASS
@@ -55,45 +61,13 @@ os
 =
 "
 linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
 "
 )
 and
 not
-tsan
+asan
 and
 debug
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
 :
 [
 PASS
