--- a/testing/web-platform/meta/intersection-observer/scroll-margin-zero.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-zero.html.ini
@@ -37,6 +37,40 @@ x86_64
 "
 )
 and
+not
+debug
+and
+fission
+and
+not
+asan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 debug
 and
 fission
