Bug 1923268 - Update soft/hard block strings. r=rpl,fluent-reviewers,android-reviewers,bolsson,delphine,amejiamarmol
Differential Revision: https://phabricator.services.mozilla.com/D225047

UltraBlame original commit: 2ff5f3aaf8413d7106853dc95bec5add8b3ef4a8

--- a/tools/lint/fluent-lint/exclusions.yml
+++ b/tools/lint/fluent-lint/exclusions.yml
@@ -1181,7 +1181,29 @@ details
 -
 notification
 -
-softblocked
+hard
+-
+blocked
+-
+extension
+-
+details
+-
+notification
+-
+hard
+-
+blocked
+-
+other
+-
+details
+-
+notification
+-
+soft
+-
+blocked
 -
 extension
 -
@@ -1191,7 +1213,9 @@ details
 -
 notification
 -
-softblocked
+soft
+-
+blocked
 -
 extension
 -
@@ -1201,7 +1225,9 @@ details
 -
 notification
 -
-softblocked
+soft
+-
+blocked
 -
 other
 -
@@ -1211,7 +1237,9 @@ details
 -
 notification
 -
-softblocked
+soft
+-
+blocked
 -
 other
 -
@@ -1404,6 +1432,16 @@ browser
 addonNotifications
 .
 ftl
+-
+addon
+-
+install
+-
+error
+-
+hard
+-
+blocked
 -
 addon
 -
