Bug 1887651 - Run baseline profile generation for Fenix on Firebase TestLab and integrate it into Nightly apks r=android-reviewers,releng-reviewers,firefox-build-system-reviewers,nalexander,jcristau,rsainani
Differential Revision: https://phabricator.services.mozilla.com/D221635

UltraBlame original commit: 394cb6b2bc8d0b9ca8da821e96944c0eb5a95442

--- a/mobile/android/fenix/app/build.gradle
+++ b/mobile/android/fenix/app/build.gradle
@@ -1496,6 +1496,10 @@ applicationIdSuffix
 .
 fenix
 "
+signingConfig
+signingConfigs
+.
+debug
 debuggable
 false
 }
@@ -1653,6 +1657,35 @@ androidTest
 resources
 '
 ]
+}
+if
+(
+project
+.
+hasProperty
+(
+'
+baselineProfilePath
+'
+)
+)
+{
+main
+{
+baselineProfiles
+.
+srcDirs
+(
+project
+.
+property
+(
+'
+baselineProfilePath
+'
+)
+)
+}
 }
 }
 splits
