--- a/taskcluster/kinds/build-apk/kind.yml
+++ b/taskcluster/kinds/build-apk/kind.yml
@@ -111,6 +111,14 @@ build
 fat
 -
 aar
+-
+generate
+-
+baseline
+-
+profile
+-
+firebase
 task
 -
 defaults
@@ -1086,6 +1094,39 @@ aar
 shippable
 /
 opt
+baseline
+-
+profile
+:
+generate
+-
+baseline
+-
+profile
+-
+firebase
+-
+fenix
+fetches
+:
+baseline
+-
+profile
+:
+-
+artifact
+:
+baseline
+-
+prof
+.
+txt
+extract
+:
+false
+dest
+:
+baselineProfiles
 include
 -
 shippable
@@ -1137,6 +1178,20 @@ apk
 size
 :
 true
+baseline
+-
+profile
+-
+path
+:
+/
+builds
+/
+worker
+/
+fetches
+/
+baselineProfiles
 run
 -
 on
@@ -3462,6 +3517,39 @@ aar
 shippable
 /
 opt
+baseline
+-
+profile
+:
+generate
+-
+baseline
+-
+profile
+-
+firebase
+-
+fenix
+fetches
+:
+baseline
+-
+profile
+:
+-
+artifact
+:
+baseline
+-
+prof
+.
+txt
+extract
+:
+false
+dest
+:
+baselineProfiles
 attributes
 :
 nightly
@@ -3515,6 +3603,20 @@ gradle
 build
 :
 fenix
+baseline
+-
+profile
+-
+path
+:
+/
+builds
+/
+worker
+/
+fetches
+/
+baselineProfiles
 source
 -
 project
