--- a/taskcluster/kinds/build-bundle/kind.yml
+++ b/taskcluster/kinds/build-bundle/kind.yml
@@ -111,6 +111,14 @@ build
 fat
 -
 aar
+-
+generate
+-
+baseline
+-
+profile
+-
+firebase
 task
 -
 defaults
@@ -1075,6 +1083,39 @@ aar
 shippable
 /
 opt
+baseline
+-
+profile
+:
+generate
+-
+baseline
+-
+profile
+-
+firebase
+-
+fenix
+fetches
+:
+baseline
+-
+profile
+:
+-
+artifact
+:
+baseline
+-
+prof
+.
+txt
+extract
+:
+false
+dest
+:
+baselineProfiles
 description
 :
 '
@@ -1134,6 +1175,20 @@ gradle
 build
 :
 fenix
+baseline
+-
+profile
+-
+path
+:
+/
+builds
+/
+worker
+/
+fetches
+/
+baselineProfiles
 source
 -
 project
