--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -15978,6 +15978,58 @@ IS_NIGHTLY_BUILD
 mirror
 :
 always
+#
+Whether
+Dialog
+elements
+emit
+beforetoggle
+and
+toggle
+events
+during
+opening
+and
+closing
+.
+#
+See
+https
+:
+/
+/
+github
+.
+com
+/
+whatwg
+/
+html
+/
+pull
+/
+10091
+-
+name
+:
+dom
+.
+element
+.
+dialog
+.
+toggle_events
+.
+enabled
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
 -
 name
 :
