--- a/testing/web-platform/meta/html/semantics/interactive-elements/the-dialog-element/toggle-events.tentative.html.ini
+++ b/testing/web-platform/meta/html/semantics/interactive-elements/the-dialog-element/toggle-events.tentative.html.ini
@@ -7,111 +7,18 @@ tentative
 .
 html
 ]
-[
-dialog
-.
-show
-(
-)
-should
-fire
-beforetoggle
-and
-toggle
-events
-.
-]
-expected
+prefs
 :
-FAIL
 [
+dom
+.
+element
+.
 dialog
 .
-show
-(
-)
-should
-fire
-cancelable
-beforetoggle
-which
-does
-not
-open
-dialog
-if
-canceled
-]
-expected
+toggle_events
+.
+enabled
 :
-FAIL
-[
-dialog
-.
-show
-(
-)
-should
-coalesce
-asynchronous
-toggle
-events
-.
+true
 ]
-expected
-:
-FAIL
-[
-dialog
-.
-showModal
-(
-)
-should
-fire
-beforetoggle
-and
-toggle
-events
-.
-]
-expected
-:
-FAIL
-[
-dialog
-.
-showModal
-(
-)
-should
-fire
-cancelable
-beforetoggle
-which
-does
-not
-open
-dialog
-if
-canceled
-]
-expected
-:
-FAIL
-[
-dialog
-.
-showModal
-(
-)
-should
-coalesce
-asynchronous
-toggle
-events
-.
-]
-expected
-:
-FAIL
