Bug 1924105 - Move tab tests from browser/base/ to browser/components/tabbrowser/. r=tabbrowser-reviewers,dwalker
Differential Revision: https://phabricator.services.mozilla.com/D225356

UltraBlame original commit: 02f8364076efec946f73e80e04e665bccb3900bb

--- a/tools/lint/rejected-words.yml
+++ b/tools/lint/rejected-words.yml
@@ -178,20 +178,6 @@ content
 /
 test
 /
-general
-/
-browser_tab_drag_drop_perwindow
-.
-js
--
-browser
-/
-base
-/
-content
-/
-test
-/
 performance
 /
 browser_preferences_usage
@@ -439,6 +425,22 @@ browser
 tabs
 /
 browser_new_file_whitelisted_http_tab
+.
+js
+-
+browser
+/
+components
+/
+tabbrowser
+/
+test
+/
+browser
+/
+tabs
+/
+browser_tab_drag_drop_perwindow
 .
 js
 -
