--- a/browser/components/tabbrowser/test/browser/tabs/browser.toml
+++ b/browser/components/tabbrowser/test/browser/tabs/browser.toml
@@ -12,14 +12,14 @@ head
 js
 "
 "
-dummy_page
-.
-html
-"
-"
 audio
 .
 ogg
+"
+"
+dummy_page
+.
+html
 "
 "
 file_mediaPlayback
@@ -94,6 +94,24 @@ js
 ]
 [
 "
+browser_alltabslistener
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+alltabslistener
+.
+html
+"
+]
+[
+"
 browser_audioTabIcon
 .
 js
@@ -104,6 +122,16 @@ tags
 "
 audiochannel
 "
+[
+"
+browser_beforeunload_duplicate_dialogs
+.
+js
+"
+]
+https_first_disabled
+=
+true
 [
 "
 browser_bfcache_exemption_about_pages
@@ -201,6 +229,13 @@ html
 ]
 [
 "
+browser_ctrlTab
+.
+js
+"
+]
+[
+"
 browser_dont_process_switch_204
 .
 js
@@ -220,6 +255,24 @@ html
 204
 .
 sjs
+"
+]
+[
+"
+browser_double_close_tab
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+file_double_close_tab
+.
+html
 "
 ]
 [
@@ -345,6 +398,39 @@ browser_hiddentab_contextmenu
 js
 "
 ]
+[
+"
+browser_lastAccessedTab
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+windows
+'
+"
+]
+#
+Disabled
+on
+Windows
+due
+to
+frequent
+failures
+(
+bug
+969405
+)
 [
 "
 browser_lastSeenActive
@@ -949,6 +1035,16 @@ headers
 ]
 [
 "
+browser_new_http_window_opened_from_file_tab
+.
+js
+"
+]
+https_first_disabled
+=
+true
+[
+"
 browser_new_tab_bookmarks_toolbar_height
 .
 js
@@ -1391,6 +1487,13 @@ https_first_disabled
 true
 [
 "
+browser_relatedTabs
+.
+js
+"
+]
+[
+"
 browser_relatedTabs_reset
 .
 js
@@ -1458,6 +1561,36 @@ html
 ]
 [
 "
+browser_restore_isAppTab
+.
+js
+"
+]
+run
+-
+if
+=
+[
+"
+crashreporter
+"
+]
+#
+test
+requires
+crashreporter
+due
+to
+1536221
+[
+"
+browser_selectTabAtIndex
+.
+js
+"
+]
+[
+"
 browser_switch_by_scrolling
 .
 js
@@ -1500,6 +1633,16 @@ js
 ]
 [
 "
+browser_tabDrop
+.
+js
+"
+]
+https_first_disabled
+=
+true
+[
+"
 browser_tabReorder
 .
 js
@@ -1538,6 +1681,106 @@ js
 browser_tab_a11y_description
 .
 js
+"
+]
+[
+"
+browser_tab_close_dependent_window
+.
+js
+"
+]
+[
+"
+browser_tab_detach_restore
+.
+js
+"
+]
+https_first_disabled
+=
+true
+[
+"
+browser_tab_drag_drop_perwindow
+.
+js
+"
+]
+[
+"
+browser_tab_dragdrop
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
+"
+]
+#
+Bug
+1312436
+Bug
+1388973
+support
+-
+files
+=
+[
+"
+browser_tab_dragdrop_embed
+.
+html
+"
+]
+[
+"
+browser_tab_dragdrop2
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+win11_2009
+&
+&
+bits
+=
+=
+32
+&
+&
+!
+debug
+"
+]
+#
+high
+frequency
+win7
+intermittent
+:
+crash
+support
+-
+files
+=
+[
+"
+browser_tab_dragdrop2_frame1
+.
+xhtml
 "
 ]
 [
@@ -1619,6 +1862,57 @@ js
 ]
 [
 "
+browser_tabfocus
+.
+js
+"
+]
+[
+"
+browser_tabkeynavigation
+.
+js
+"
+]
+[
+"
+browser_tabs_close_beforeunload
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+close_beforeunload_opens_second_tab
+.
+html
+"
+"
+close_beforeunload
+.
+html
+"
+]
+[
+"
+browser_tabs_isActive
+.
+js
+"
+]
+[
+"
+browser_tabs_owner
+.
+js
+"
+]
+[
+"
 browser_tabswitch_contextmenu
 .
 js
@@ -1658,6 +1952,13 @@ js
 ]
 [
 "
+browser_testOpenNewRemoteTabsFromNonRemoteBrowsers
+.
+js
+"
+]
+[
+"
 browser_undo_close_tabs
 .
 js
@@ -1684,7 +1985,28 @@ js
 ]
 [
 "
+browser_viewSourceInTabOnViewSource
+.
+js
+"
+]
+[
+"
 browser_viewsource_of_data_URI_in_file_process
+.
+js
+"
+]
+[
+"
+browser_visibleTabs
+.
+js
+"
+]
+[
+"
+browser_visibleTabs_bookmarkAllPages
 .
 js
 "
@@ -1701,6 +2023,31 @@ js
 browser_visibleTabs_contextMenu
 .
 js
+"
+]
+[
+"
+browser_visibleTabs_tabPreview
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+win
+'
+&
+&
+!
+debug
 "
 ]
 [
