Bug 1764822 - Implement mica titlebar behind a (default off) pref. r=desktop-theme-reviewers,win-reviewers,dao,rkraesig
This is somewhat straight-forward now that all the dependencies are
landed.

I think we do need to find a solution to make the app titlebar buttons
taller, by hiding the caption buttons
(https://phabricator.services.mozilla.com/D207303 tried to do this, but
ran into other issues), or making the titlebar taller, which is doable
in UWP at least, but I don't see any way of doing it in win32 apps:

 * https://learn.microsoft.com/en-us/windows/windows-app-sdk/api/winrt/microsoft.ui.windowing.appwindowtitlebar.preferredheightoption?view=windows-app-sdk-1.6

But still this is usable and would be worth getting in, since it's
needed for the translucent sidebar work too.

Differential Revision: https://phabricator.services.mozilla.com/D225364

UltraBlame original commit: 67cca07bbf52337406cc8c71743bda9e345f973f

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -107527,6 +107527,37 @@ mirror
 :
 always
 #
+Whether
+we
+use
+the
+mica
+backdrop
+.
+Off
+by
+default
+for
+now
+.
+-
+name
+:
+widget
+.
+windows
+.
+mica
+type
+:
+bool
+value
+:
+false
+mirror
+:
+once
+#
 endif
 #
 Whether
