--- a/browser/components/sessionstore/test/browser.toml
+++ b/browser/components/sessionstore/test/browser.toml
@@ -1435,6 +1435,20 @@ js
 ]
 [
 "
+browser_tab_groups_restore_simple
+.
+js
+"
+]
+[
+"
+browser_tab_groups_restore_multiple
+.
+js
+"
+]
+[
+"
 browser_tab_groups_state
 .
 js
