Bug 1913114 - wasm: Rename lazy tiering prefs and add pref that enables lazy tiering only for wasm-gc. r=yury
- Remove the experimental part of these flags.
 - Rename the overall flag to just talk about lazy_tiering.
 - Add a lazy_tiering_for_gc which enables this feature only for wasm-gc modules.

Differential Revision: https://phabricator.services.mozilla.com/D225124

UltraBlame original commit: 8f48c0f2c326f8a35647687834d6b038c8d42753

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -51176,6 +51176,32 @@ always
 set_spidermonkey_pref
 :
 always
+#
+Enables
+lazy
+tiering
+for
+wasm
+modules
+that
+have
+a
+GC
+type
+defined
+in
+them
+.
+#
+Use
+wasm_lazy_tiering
+to
+enable
+it
+for
+any
+module
+.
 -
 name
 :
@@ -51183,7 +51209,7 @@ javascript
 .
 options
 .
-wasm_experimental_compile_pipeline
+wasm_lazy_tiering_for_gc
 type
 :
 bool
@@ -51195,7 +51221,46 @@ mirror
 always
 set_spidermonkey_pref
 :
-startup
+always
+#
+Enables
+lazy
+tiering
+for
+all
+modules
+.
+Use
+wasm_lazy_tiering_for_gc
+to
+only
+#
+enable
+this
+for
+GC
+modules
+.
+-
+name
+:
+javascript
+.
+options
+.
+wasm_lazy_tiering
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+always
 -
 name
 :
