Bug 1913114 - wasm: Update tests for new flags, add a sync flag. r=yury
- Add a 'wasm_lazy_tiering_synchronous' flag which avoids a background compile
to simplify testing.
- Update all tests to use the right prefs.
- Enable some tests that were erroneously disabled still
- Fix an issue with stack comparisons where the 'request-tier-up' stub
  was included.

Differential Revision: https://phabricator.services.mozilla.com/D225128

UltraBlame original commit: 1a822192b8d869636c66e959671e6b272db3ba74

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -51351,6 +51351,41 @@ set_spidermonkey_pref
 :
 always
 #
+Forces
+lazy
+tiering
+to
+synchronously
+compile
+instead
+of
+using
+a
+background
+#
+thread
+.
+-
+name
+:
+javascript
+.
+options
+.
+wasm_lazy_tiering_synchronous
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+always
+#
 Aggressiveness
 of
 inlining
