Bug 1917859 - Extend blocklist backend telemetry for soft-blocking. r=robwu
Differential Revision: https://phabricator.services.mozilla.com/D223844

UltraBlame original commit: 182e93d3e7f7f90f030e795c636cbfc1150e0aab

--- a/toolkit/mozapps/extensions/metrics.yaml
+++ b/toolkit/mozapps/extensions/metrics.yaml
@@ -2095,6 +2095,8 @@ expires
 never
 mlbf_source
 :
+&
+mlbf_source
 type
 :
 string
@@ -2516,8 +2518,62 @@ no_lint
 :
 -
 GIFFT_NON_PING_LIFETIME
+mlbf_softblocks_source
+:
+<
+<
+:
+*
+mlbf_source
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
+data_reviews
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
+#
+c2
+telemetry_mirror
+:
+BLOCKLIST_MLBF_SOFTBLOCKS_SOURCE
 mlbf_generation_time
 :
+&
+mlbf_generation_time
 type
 :
 datetime
@@ -2829,6 +2885,55 @@ com
 expires
 :
 never
+mlbf_softblocks_generation_time
+:
+<
+<
+:
+*
+mlbf_generation_time
+bugs
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
+data_reviews
+:
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
+#
+c2
 mlbf_stash_time_oldest
 :
 type
@@ -3630,24 +3735,15 @@ on
 0
 is
 unblocked
-2
-is
-blocked
-.
 1
 is
 soft
 blocked
-(
-this
-state
-does
-not
-exist
-in
-blocklist
-v3
-)
+and
+2
+is
+hard
+blocked
 .
 addon_version
 :
@@ -3934,6 +4030,44 @@ cache_fallback
 unknown
 "
 .
+mlbf_softblocks_generation
+:
+type
+:
+string
+description
+:
+>
+Same
+as
+mlbf_generation
+but
+for
+the
+separate
+softblocks
+bloomfilter
+attachment
+.
+mlbf_softblocks_source
+:
+type
+:
+string
+description
+:
+>
+Same
+as
+mlbf_source
+but
+for
+the
+separate
+softblocks
+bloomfilter
+attachment
+.
 bugs
 :
 -
@@ -4062,6 +4196,24 @@ cgi
 id
 =
 1912167
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
 data_reviews
 :
 -
@@ -4124,6 +4276,26 @@ id
 1912167
 #
 c4
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1917859
+#
+c2
 data_sensitivity
 :
 -
